--- a/admin-next/src/index.less
+++ b/admin-next/src/index.less
@@ -1,7 +1,17 @@
+:root {
+  --c-primary: 26, 92, 255;
+  --c-success: 70, 201, 58;
+  --c-danger: 255, 71, 87;
+  --c-warn: 255, 186, 0;
+  --c-dark: 30, 30, 30;
+}
+
 * {
   box-sizing: border-box;
   user-select: none;
-  font-family: 'Passion One';
+  outline: none;
+  font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -11,4 +21,5 @@ a {
 body {
   padding: 0;
   margin: 0;
+  font-size: 16px;
 }
