--- a/admin-next/src/index.less
+++ b/admin-next/src/index.less
@@ -8,10 +8,14 @@
 
 * {
   box-sizing: border-box;
-  user-select: none;
   outline: none;
   font-family: Poppins, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+::selection {
+  color: #fff;
+  background: rgba(0, 0, 0, 0.6);
 }
 
 a {
